k8s/apps/mended-drum/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  labels:
    app.kubernetes.io/name: open-webui
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: open-webui
